--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Now lets modify my resume html page that we have created in day 7 using semantic
         <table>
             <tr>
                 <td>
-                    <img src="output1.png" alt="Jayant's photo" width="150">
+                    <img src="C:\Users\KIIT0001\OneDrive\Desktop\Web Development\Day-8\output1.png" alt="Jayant's photo" width="150">
                 </td>
                 <td>
                     <h1>Jayant Dewangan</h1>
